Refactored code into modules
There is now a search module for the search pane and an edit module for
editing tiddlers (plus some others).

It's using requirejs for the modular approach, and relies on the
chrjs-store bundling of almond.js for requirejs presence. It's also
using events.js and exemplar.js, 2 micro libraries to handle creating
function exemplars and eventing (inc. DOM events). They can be found at
https://github.com/bengillies/stuff-js

--- a/dash.html
+++ b/dash.html
@@ -149,8 +149,11 @@
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/common/tiddlers/jquery.js"></script>
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/benspa_public/tiddlers/mustache.min.js"></script>
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/benspa_public/tiddlers/routes.js"></script>
+		<script type="text/javascript" src="http://tiddlyspace.com:8081/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/tiddlyspace/tiddlers/chrjs"></script>
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/benspa_public/tiddlers/chrjs-store.js"></script>
+		<script type="text/javascript" src="http://tiddlyspace.com/bags/benspa_public/tiddlers/exemplar.js"></script>
+		<script type="text/javascript" src="http://tiddlyspace.com/bags/benspa_public/tiddlers/events.js"></script>
 		<script type="text/javascript" src="http://tiddlyspace.com/bags/common/tiddlers/backstage.js"></script>
 		<script type="text/javascript" src="dash.js"></script>
 	</body>
